--- a/app/src/main/res/layout/activity_feb11.xml
+++ b/app/src/main/res/layout/activity_feb11.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
         android:gravity="center"
-        android:text="Odd numbers appear here!"
+        android:text="@string/odd_numbers_appear_here"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/btn"
         tools:layout_editor_absoluteX="0dp" />
@@ -25,7 +25,8 @@
         android:layout_marginStart="152dp"
         android:layout_marginTop="272dp"
         android:onClick="showAlertDialogButtonClicked"
-        android:text="Click me"
+        android:text="@string/click_me"
+        android:textColor="#212121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,9 +34,9 @@
         android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
