--- a/app/src/main/res/layout/activity_feb161.xml
+++ b/app/src/main/res/layout/activity_feb161.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <TextView
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Result"
+        android:text="@string/result"
         android:textSize="30sp" />
 
     <Button
@@ -29,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="click me" />
+        android:text="@string/click_me"
+        android:textColor="#212121" />
 
 </LinearLayout>
