--- a/app/src/main/res/layout/activity_feb221.xml
+++ b/app/src/main/res/layout/activity_feb221.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <ListView
