--- a/app/src/main/res/layout/activity_feb81.xml
+++ b/app/src/main/res/layout/activity_feb81.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <Button
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="100dp"
-        android:text="Click me" />
+        android:text="@string/click_me"
+        android:textColor="#212121" />
 
 </LinearLayout>
