--- a/app/src/main/res/layout/activity_jan121.xml
+++ b/app/src/main/res/layout/activity_jan121.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <LinearLayout
@@ -27,14 +27,16 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginEnd="25dp"
-            android:hint="Enter Your Name"
+            android:autofillHints="name"
+            android:hint="@string/enter_your_name"
             android:inputType="textPersonName" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="ClickMe"
-            android:text="Click Me" />
+            android:text="@string/click_me"
+            android:textColor="#212121" />
 
     </LinearLayout>
 
