--- a/app/src/main/res/layout/activity_jan122.xml
+++ b/app/src/main/res/layout/activity_jan122.xml
@@ -13,14 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Calculator Demo"
+        android:text="@string/calculator_demo"
         android:textSize="30sp" />
 
     <EditText
@@ -28,16 +28,20 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:hint="First Number"
-        android:inputType="number" />
+        android:autofillHints="integers"
+        android:hint="@string/first_number"
+        android:inputType="number"
+        android:minHeight="48dp" />
 
     <EditText
         android:id="@+id/num2"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="Second Number"
-        android:inputType="number" />
+        android:autofillHints="integers"
+        android:hint="@string/second_number"
+        android:inputType="number"
+        android:minHeight="48dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,32 +51,40 @@
         android:orientation="horizontal">
 
         <Button
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:onClick="sum"
-            android:text="+" />
+            android:text="@string/plus"
+            android:textColor="#212121" />
 
         <Button
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:onClick="sub"
-            android:text="-" />
+            android:text="@string/minus"
+            android:textColor="#212121" />
 
         <Button
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:onClick="mul"
-            android:text="x" />
+            android:text="@string/multiply_symbol"
+            android:textColor="#212121" />
 
         <Button
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:onClick="div"
-            android:text="/" />
+            android:text="@string/divide_symbol"
+            android:textColor="#212121" />
 
     </LinearLayout>
 
@@ -81,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Result"
+        android:text="@string/result"
         android:textSize="15sp" />
 
 </LinearLayout>
