--- a/app/src/main/res/layout/activity_jan181.xml
+++ b/app/src/main/res/layout/activity_jan181.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="15dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <HorizontalScrollView
@@ -21,45 +21,56 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#0277BD" />
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#0277BD" />
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#0277BD" />
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#0277BD" />
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#0277BD" />
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:text="Button" />
+                android:text="@string/button" />
 
         </LinearLayout>
 
@@ -71,7 +82,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:orientation="vertical">
 
@@ -79,97 +90,109 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button"
+                android:textColor="#212121" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="2dp"
-                android:text="Button" />
+                android:text="@string/button" />
 
         </LinearLayout>
 
