--- a/app/src/main/res/layout/activity_jan182.xml
+++ b/app/src/main/res/layout/activity_jan182.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="165dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <View
