--- a/app/src/main/res/layout/activity_mar291.xml
+++ b/app/src/main/res/layout/activity_mar291.xml
@@ -13,13 +13,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:text=""
         android:textSize="20sp" />
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp" />
 
 </LinearLayout>
