--- a/app/src/main/res/layout/custom_contacts_list_view.xml
+++ b/app/src/main/res/layout/custom_contacts_list_view.xml
@@ -8,6 +8,7 @@
         android:id="@+id/imageView"
         android:layout_width="84dp"
         android:layout_height="84dp"
+        android:contentDescription="@string/contact_profile_photo"
         android:padding="16dp" />
 
     <LinearLayout
@@ -20,7 +21,7 @@
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom|left"
+            android:gravity="bottom|start"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -28,7 +29,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="top|left"
+            android:gravity="top|start"
             android:textSize="14sp" />
 
     </LinearLayout>
