--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -8,6 +8,7 @@
         android:id="@+id/imageView"
         android:layout_width="84dp"
         android:layout_height="84dp"
+        android:contentDescription="@string/a_photo"
         android:padding="16dp" />
 
     <LinearLayout
@@ -21,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:gravity="bottom|left"
+            android:gravity="bottom|start"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -31,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:gravity="top|left"
+            android:gravity="top|start"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
 
