--- a/app/src/main/res/layout/custom_text_layout.xml
+++ b/app/src/main/res/layout/custom_text_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Result"
+        android:text="@string/result"
         android:textAlignment="center"
         android:textSize="20sp" />
 </LinearLayout>
